# my-awesome-project

./: .env.example  .gitignore  Lesson5_ai.py  company_info.txt  dirty_data.csv  lesson1.py  lesson10_vectordb.py  lesson11_rag.py  lesson12_streamlit.py  lesson13_rag_web.py  lesson2.py  lesson3.py  lesson4.py  lesson6_chatbot.py  lesson7_personality.py  lesson8_langchain.py  lesson9_documents.py  project_ai_analyst.py  project_sales.py  pyproject.toml  requirements.txt  sales_data.csv  students.csv
