[project]
name = "my-awesome-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.7.0",
    "google-generativeai>=0.8.6",
    "groq>=1.4.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=1.1.2",
    "chromadb>=1.5.9",
    "sentence-transformers>=5.5.1",
    "langchain-huggingface>=1.2.2",
    "langchain-chroma>=1.1.0",
]
